# cpp_banking_system

./: CMakeLists.txt  README.md
.github/workflows/: ci-cpp-style-check  ci-cpp-style-check.yml
scripts/: codestyle.sh
src/: accounts.h  processing.cpp
src/accounts/: accounts.cpp  accounts.h
src/processing/: processing.cpp
tests/: main_tests.cpp
